objects/tffa__ApplicationTerm__c.object
<CustomObject>
    <description>Captures term distribution for an application. Term distribution can be based on how total amount (in application) is invested across multiple terms spanning across the total term. For a CD application, this can be called CD laddering, where each term represents a rung in the ladder.</description>
    <fields>
        <fullName>tffa__APY__c</fullName>
        <description>The annual percentage yield (APY) is the real rate of return earned on the amount invested taking into account the effect of compounding interest.</description>
        <label>APY</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>The final generated account number. This will be set only after the final account number is available as part of the response of an account open API call.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountOpenedOn__c</fullName>
        <description>The date and time when the account was opened (in core).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account opened on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>The amount allocated for current term. This is a portion of the full amount captured in the parent application.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Parent Application</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Accounts / Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique identifier (or code) of current term. Deprecated, use Term code instead.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code (DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaskedAccountNumber__c</fullName>
        <description>Last 4 digits of account numner for display purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Rate__c</fullName>
        <description>Rate of interest applicable for the current term.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates the current status of the account captured as application term.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationTermStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__TermCode__c</fullName>
        <description>Unique identifier (or code) of captured term.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Term code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Term__c</fullName>
        <description>Term value of captured term.</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Term</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>